# cactus

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  ptr.config
benchmark/middle/: transmission-cli.bc
benchmark/small/: config  elfedit.bc  lighttpd.bc  memcached.bc  pbzip2.bc  pesI.bc  pesI.wpa  sysinfo.bc  tar.bc  unreachable_main_case.bc  very_long_floatpoint.bc  very_long_floatpoint.wpa  xz.wpa
build-test/: CMakeCache.txt
config/: modref.config  ptr.config
docs/: Makefile  requirements.txt  setup_docs.sh
docs/source/: conf.py  index.rst
docs/source/components/: alias_analysis.rst  configuration.rst  index.rst  taint_analysis.rst
docs/source/dev_guide/: index.rst
docs/source/getting_started/: basic_usage.rst  index.rst
docs/source/tools/: index.rst  saber.rst  sparrow.rst  wpa.rst
include/Alias/OBAA/: Address.h  Narrowing.h  OffsetPointer.h  RAOffset.h  SSIfy.h
include/Alias/SRAA/: RangeAnalysis.h  StrictRelationAliasAnalysis.h  (+1 more)
include/Context/: AdaptiveContext.h  Context.h  IntrospectiveSelectiveKCFA.h  KLimitContext.h  ProgramPoint.h  SelectiveKCFA.h
include/FPAnalysis/: FunPtrAnalysis.h  SimpleFPAnalysis.h  TypeAnalysis.h
include/OBAA/: Address.h  Narrowing.h  OffsetBasedAliasAnalysis.h  OffsetPointer.h  RAOffset.h
include/SRAA/: RangeAnalysis.h  StrictRelationAliasAnalysis.h
include/SparrowUtils/: AnalysisUtil.h  BasicTypes.h  CPPUtil.h  ExtAPI.h  GenericGraph.h  RangeAnalysis.h
include/Util/: StringUtils.h
lib/: CMakeLists.txt
lib/Alias/: CMakeLists.txt
lib/Alias/Canary/: CMakeLists.txt
lib/Alias/Canary/DyckAA/: AAAnalyzer.cpp  DyckAliasAnalysis.cpp  EdgeLabel.cpp
lib/Alias/Canary/DyckCG/: DyckCallGraph.cpp  DyckCallGraphNode.cpp
lib/Alias/Canary/DyckGraph/: DyckGraph.cpp  DyckVertex.cpp
lib/Alias/OBAA/: Address.cpp  Narrowing.cpp  Offset.cpp  OffsetBasedAliasAnalysis.cpp  OffsetPointer.cpp  RAOffset.cpp  RangeAnalysis.cpp  SSIfy.cpp  vSSA.cpp
lib/Alias/SRAA/: RangeAnalysis.cpp  StrictRelationAliasAnalysis.cpp  vSSA.cpp
lib/Annotation/: ExternalModRefTable.cpp  ExternalPointerTable.cpp  ExternalTaintTable.cpp
lib/Dynamic/Instrument/: MemoryInstrument.cpp
lib/Dynamic/Log/: LogReader.cpp
lib/FPAnalysis/: FunPtrAnalysis.cpp  SimpleFPAnalysis.cpp  TypeAnalysis.cpp
lib/FPAnalysis/CHA/: CHA.cpp
lib/FPAnalysis/Canary/DyckAA/: AAAnalyzer.cpp  DyckAliasAnalysis.cpp  EdgeLabel.cpp
lib/FPAnalysis/Canary/DyckCG/: DyckCallGraph.cpp  DyckCallGraphNode.cpp
lib/FPAnalysis/Canary/DyckGraph/: DyckGraph.cpp  DyckVertex.cpp
lib/FPAnalysis/Steensgaard/DyckAA/: AAAnalyzer.cpp  DyckAliasAnalysis.cpp  EdgeLabel.cpp
lib/FPAnalysis/Steensgaard/DyckCG/: DyckCallGraph.cpp  DyckCallGraphNode.cpp
lib/FPAnalysis/Steensgaard/DyckGraph/: DyckGraph.cpp  DyckVertex.cpp
lib/OBAA/: Address.cpp  Narrowing.cpp  Offset.cpp  OffsetBasedAliasAnalysis.cpp  OffsetPointer.cpp  RAOffset.cpp  RangeAnalysis.cpp  SSIfy.cpp  vSSA.cpp
lib/PointerAnalysis/: CMakeLists.txt  StaticFields.cpp
lib/PointerAnalysis/Analysis/: GlobalPointerAnalysis.cpp  PointerAnalysisQueries.cpp  SelectiveKCFAExample.cpp  SelectiveKCFAPointerAnalysis.cpp  SemiSparsePointerAnalysis.cpp
lib/PointerAnalysis/Context/: AdaptiveContext.cpp  IntrospectiveSelectiveKCFA.cpp  KLimitContext.cpp  SelectiveKCFA.cpp
lib/PointerAnalysis/Engine/: ContextSensitivity.cpp  ExternalCallAnalysis.cpp  Initializer.cpp  IntrospectiveContextSensitivity.cpp  SemiSparsePropagator.cpp  StorePruner.cpp  TransferFunction.cpp
lib/PointerAnalysis/Engine/Strategies/: IntrospectiveContextSensitivity.cpp  SimpleSelectiveKCFAStrategies.cpp
lib/PointerAnalysis/Engine/Transfer/: AllocTransfer.cpp  CallTransfer.cpp  CopyTransfer.cpp  LoadTransfer.cpp  OffsetTransfer.cpp  ReturnTransfer.cpp  StoreTransfer.cpp
lib/PointerAnalysis/FrontEnd/: ArrayLayoutAnalysis.cpp  FunctionTranslator.cpp  InstructionTranslator.cpp  PointerLayoutAnalysis.cpp  StructCastAnalysis.cpp  TypeAnalysis.cpp  TypeCollector.cpp
lib/PointerAnalysis/MemoryModel/: ArrayLayout.cpp  MemoryManager.cpp  PointerLayout.cpp  PointerManager.cpp  TypeLayout.cpp
lib/PointerAnalysis/Precision/: PrecisionLossTracker.cpp
lib/SRAA/: RangeAnalysis.cpp  StrictRelationAliasAnalysis.cpp  vSSA.cpp
lib/SVF/: CMakeLists.txt
lib/SVF/CUDD/: CMakeLists.txt
lib/SVF/CUDD/CUDD/: cudd.h  cuddInt.h  dddmp.h  dddmpInt.h  epd.h  mnemosyne.h  mtr.h  mtrInt.h  st.h  util.h
lib/SVF/MSSA/: CMakeLists.txt
lib/SVF/MemoryModel/: CMakeLists.txt
lib/SVF/SABER/: CMakeLists.txt
lib/SVF/Util/: CMakeLists.txt
lib/SVF/WPA/: CMakeLists.txt  DSAExternals.cpp  WPAPass.cpp
lib/SparrowUtils/: AnalysisUtil.cpp  CPPUtil.cpp  Common.cpp  ExtAPI.cpp  Profiler.cpp  ProgressBar.cpp  RangeAnalysis.cpp
lib/TaintAnalysis/: CMakeLists.txt
lib/TaintAnalysis/Analysis/: TaintAnalysis.cpp
lib/TaintAnalysis/Engine/: ExternalCallAnalysis.cpp  Initializer.cpp  SinkViolationChecker.cpp  TaintPropagator.cpp  TransferFunction.cpp
lib/TaintAnalysis/FrontEnd/: DefUseModuleBuilder.cpp  ModRefModuleAnalysis.cpp  ReachingDefModuleAnalysis.cpp
lib/TaintAnalysis/Output/: TaintPrinter.cpp  WriteDotFile.cpp
lib/TaintAnalysis/Precision/: CallTracker.cpp  PrecisionLossTracker.cpp  ReturnTracker.cpp
lib/TaintAnalysis/Program/: DefUseModule.cpp
lib/Transforms/: CMakeLists.txt  ExpandByVal.cpp  ExpandConstantExpr.cpp  ExpandGetElementPtr.cpp  ExpandIndirectBr.cpp  ExpandUtils.cpp  FoldIntToPtr.cpp  GlobalCleanup.cpp
lib/Util/: CMakeLists.txt  StringUtils.cpp
lib/Util/CommandLine/: CommandLineParser.cpp
lib/Util/DataStructure/: worklist.cpp
lib/Util/SparrowUtils/: AnalysisUtil.cpp  CPPUtil.cpp  Common.cpp  ExtAPI.cpp  Profiler.cpp  ProgressBar.cpp
tools/: CMakeLists.txt
tools/SABER/: CMakeLists.txt
tools/Sparrow/: CMakeLists.txt  sparrow.cpp
tools/WPA/: CMakeLists.txt
tools/global-pts/: CommandLineOptions.cpp  CommandLineOptions.h  RunAnalysis.cpp
tools/pts-dump/: CommandLineOptions.cpp  CommandLineOptions.h  RunAnalysis.cpp
tools/pts-verify/: RunAnalysis.cpp
tools/vkcfa-taint/: CommandLineOptions.cpp  CommandLineOptions.h  RunAnalysis.cpp
(+57 files in other folders)
